--- a/hiding-spots.html
+++ b/hiding-spots.html
@@ -22,11 +22,11 @@
     <main>
         <h2>Hadal Blacksite</h2>
         <img src="images/hadal-spot1.png" alt="Hadal Blacksite Spot 1">
-        <p>This hiding spot in Hadal Blacksite is near the main entrance.</p>
+        <p>EXAMPLE BLACKSITE HIDING SPOT</p>
 
         <h2>The Ridge</h2>
         <img src="images/ridge-spot1.png" alt="The Ridge Spot 1">
-        <p>This hiding spot in The Ridge is behind the collapsed tunnel.</p>
+        <p>EXAMPLE RIDGE HIDING SPOT</p>
     </main>
 
     <footer>
